2007-08-20  Stefan Böhmann <ebrief@hilefoks.org>
	- ported to KDE4
	- now using .ui files
	- implemented reminder function
	- implemented command-line argument
	- bumped version number to 1.2.0

2003-11-02  Martin Willers <willers@xm-arts.de>
	- bugfix: opening the configuration dialog was leaking memory
	- workaround for Qt bug(?): deleting teas didn't update QListView properly (fixes #63840)
	  (the above two fixes based on patches by Daniel Teske)
	- bugfix: when no tea was defined, one couldn't start an anonymous tea either
	- bugfix: on some occasions, the tooltip wasn't updated properly

2003-08-23  Martin Willers <willers@xm-arts.de>
	- added option to visualize steeping progress in tray icon
	- some work towards unified source headers
	- bumped version number

2003-08-22  Martin Willers <willers@xm-arts.de>
	- fix ToolTip disappearing prematurely
	(patch by "Ivan")

2003-04-17  Martin Willers <willers@xm-arts.de>
	- fixed bug with propagation of valueChanged() signals from TimeEdit
	- fixed bug: removing all teas from list was leading to crash!
	- changed default tea time of "anonymous" dialog to 3 minutes

2003-04-10  Martin Willers <willers@xm-arts.de>
	- have now proper wrapping time-edit widget
	- added facility to start steeping an 'anonymous' tea
	- using new KDE 3.1.1 method for positioning KNotifyClient
	(based on patches provided by Daniel Teske)

2003-03-14  Martin Willers <willers@xm-arts.de>
	- added "Configure Events..." button for quick access to kcontrol
	- some internal tidying and cleanups
	- using convenience class TeaListItem instead of QListViewItem
	- small optimization: don't use lastitem() of listbox (which traverses whole list),
	  work with itemBelow() instead
	- using custom TimeEdit-widget for entering times with minutes and seconds
	(patches provided by Daniel Teske)

2003-03-07  (external)
	- Implement place holder for tea sort like requested in #54551

2003-02-23  Martin Willers <willers@xm-arts.de>