@@ -1,3 +1,6 @@
+2007-09-29  Stefan Böhmann <ebrief@hilefoks.org>
+	- added/improved command-line arguments to start a tea (like requested in #144708).
+
 2007-08-20  Stefan Böhmann <ebrief@hilefoks.org>
 	- ported to KDE4
 	- now using .ui files
